[gd_scene load_steps=6 format=2]

[ext_resource path="res://BubbleArea.gd" type="Script" id=1]
[ext_resource path="res://Assets/bubble.png" type="Texture" id=2]
[ext_resource path="res://Assets/bubble2.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 12.6491

[node name="BubbleArea" type="Area2D"]
scale = Vector2( 1.25, 1.25 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.1179, 0.471619 )
scale = Vector2( 2.41333, 2.38667 )
shape = SubResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0.530578, 1.17906 )
scale = Vector2( 3.05746, 3.05156 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="DelayTimer" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_BubbleArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_BubbleArea_body_exited"]
[connection signal="viewport_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_viewport_entered"]
[connection signal="viewport_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_viewport_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
